@@ -11,6 +11,8 @@ Build-Depends:
  liblog4c-dev,
  libesmtp-dev,
  libsqlite3-dev,
+ libcurl-dev,
+ libmongoc-dev,
  pkg-config,
  libcmocka-dev,
  libsafu-dev,
@@ -27,13 +29,132 @@ Package: elos
 Architecture: any
 Depends:
  ${misc:Depends},
- ${shlibs:Depends},
  elosd (= ${binary:Version}),
  elosc (= ${binary:Version}),
 Description: Event logging and management with normalized output-format
  elos is a tool to collect, store and publish various system events (i.e.
  syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
  while providing easy access to the collected data.
+
+Package: elos-plugin-backend-dlt
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (DLT plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ DLT backend plugin.
+
+Package: elos-plugin-backend-dummy
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (Dummy plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ Dummy backend plugin.
+
+Package: elos-plugin-backend-influxdb
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (InfluxDB plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ InfluxDB backend plugin.
+
+Package: elos-plugin-backend-json
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (JSON plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ JSON backend plugin.
+
+Package: elos-plugin-backend-nosql
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (NoSQL plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ NoSQL backend plugin.
+
+Package: elos-plugin-backend-sql
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (SQL plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ DLT backend plugin.
+
+Package: elos-plugin-client-dummy
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (Dummy client plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ Dummy client plugin.
+
+Package: elos-plugin-scanner-kmsg
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (kmsg scanner plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ Kmsg scanner plugin.
+
+Package: elos-plugin-scanner-shmem
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (shmem plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ Shmem scanner plugin.
+
+Package: elos-plugin-scanner-syslog
+Architecture: any
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: Event logging and management with normalized output-format (syslog plugin)
+ elos is a tool to collect, store and publish various system events (i.e.
+ syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
+ while providing easy access to the collected data.
+ .
+ Syslog scanner plugin.
 
 Package: elosd
 Architecture: any
@@ -92,6 +213,17 @@ Architecture: any
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
+Recommends:
+ elos-plugin-backend-dlt (= ${binary:Version}),
+ elos-plugin-backend-dummy (= ${binary:Version}),
+ elos-plugin-backend-influxdb (= ${binary:Version}),
+ elos-plugin-backend-json (= ${binary:Version}),
+ elos-plugin-backend-nosql (= ${binary:Version}),
+ elos-plugin-backend-sql (= ${binary:Version}),
+ elos-plugin-client-dummy (= ${binary:Version}),
+ elos-plugin-scanner-kmsg (= ${binary:Version}),
+ elos-plugin-scanner-shmem (= ${binary:Version}),
+ elos-plugin-scanner-syslog (= ${binary:Version}),
 Description: Event logging and management with normalized output-format library
  elos is a tool to collect, store and publish various system events (i.e.
  syslogs, core dumps, measurements obtained from proc- and sys-fs, ...)
