@@ -1,0 +1,1 @@
+usr/lib/*/elos/backend/backend_dlt_logger.so
