@@ -1,0 +1,1 @@
+usr/lib/*/elos/scanner/scanner_syslog.so
