@@ -1,2 +1,1 @@
 usr/lib/*/libelos*.so.*
-usr/lib/*/elos/*
