@@ -17,7 +17,10 @@ override_dh_auto_configure:
 		-DINSTALL_UNIT_TESTS=off \
 		-DELOS_DAEMON=on \
 		-DELOS_TOOLS=on \
-		-DELOS_PLUGINS=on
+		-DELOS_PLUGINS=on \
+		-DELOSD_EVENTLOGGING_BACKEND_SQL=on \
+		-DELOSD_EVENTLOGGING_BACKEND_NOSQL=on \
+		-DELOSD_EVENTLOGGING_BACKEND_INFLUXDB=on
 
 override_dh_auto_install:
 	dh_auto_install
